test/files/pos/t7919.scala

object X {
  val x = s""
  val y = true
}

