test/files/neg/bug1286/b.scala
object Foo extends Foo {
  val x = "x"
}
